--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mkdirp": "^0.5.1",
     "normalize-newline": "^3.0.0",
     "pkg-conf": "^2.1.0",
+    "polished": "^2.3.3",
     "progress-bar-webpack-plugin": "^1.11.0",
     "prop-types": "^15.6.2",
     "puppeteer": "^1.10.0",
