--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "prepare": "npm run babel",
     "babel": "babel src -d dist",
     "watch": "babel src -d dist --watch",
-    "start": "./cli.js docs/index.mdx -p 8080",
-    "build": "./cli.js build docs/index.mdx -d site",
-    "pdf": "./cli.js pdf docs/index.mdx -d site",
-    "screenshot": "./cli.js screenshot docs/index.mdx -d docs",
+    "start": "./cli.js demo/index.mdx -p 8080",
+    "build": "./cli.js build demo/index.mdx -d site",
+    "pdf": "./cli.js pdf demo/index.mdx -d site",
+    "screenshot": "./cli.js screenshot demo/index.mdx -d demo",
     "help": "./cli.js",
     "test": "jest"
   },
